fixed the stupid css layout issue

--- a/src/Style/addRecipePageStyle.css
+++ b/src/Style/addRecipePageStyle.css
@@ -1,5 +1,13 @@
 @import url('https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css');
 
+.parent2 {
+  margin: auto;
+  width: 100%;
+  height: auto;
+  /*max-height: 100%; */
+  /* margin-top: auto; */
+}
+
 .sidebar-container {
   padding-right: 26px;
   padding-left: 26px;
